[tool.poetry]
name = "my-slotmachine"
version = "0.1.0"
description = "My Slot machin from Tech With Tim tutorial"
authors = ["Mihamina Rakotovazaha"]
license = "MIT"
readme = "README.md"
packages = [{include = "my_slotmachine"}]

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.3.3"
black = "^23.3.0"
pylint = "^2.17.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
